# devtrakr

./: .dockerignore  .gitignore  .worktree-init.sh  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  docker-compose.yml
backend/: .env.example  Dockerfile  page_perms.json  pyproject.toml
backend/apps/: pagination.py  urls.py  widgets.py
backend/apps/ai/: admin.py  client.py  services.py
backend/apps/ai_testing/: agent.py  browser.py  prompts.py  services.py  views.py
backend/apps/backups/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/config/: asgi.py  settings.py
backend/tests/: conftest.py  factories.py  test_ai_models.py  test_ai_testing_agent.py  test_ai_testing_api.py  test_ai_testing_browser.py  test_ai_testing_services.py  test_ai_wizard.py  test_assignment_api.py  test_assignment_workflow.py  test_attachment_admin.py  test_attachments.py  test_auto_assign.py  test_backup_api.py  test_backup_models.py  test_backup_scheduling.py  test_backup_services.py  test_backup_tasks.py  test_bulletins.py  test_chat_consumer.py  test_danmaku.py  test_danmaku_ws.py  test_dashboard.py  test_default_project.py  test_external_api.py  test_gateway_status.py  test_github_preview.py  test_impersonation.py  test_issue_analysis.py  test_issue_chat.py  test_issue_comments.py  test_issue_resolved_at.py  test_issues.py  test_issues_duplicate_check.py  test_kpi_metrics.py  test_my_tasks.py  test_notifications.py  test_notifications_admin_actions.py  test_notifications_publish_api.py  test_page_perms_dump.py  (+15 more)
(+329 files in other folders)
