[project]
name = "devtrack"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0,<7.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-solo>=2.3,<3.0",
    "django-filter>=25.0,<26.0",
    "psycopg[binary]>=3.2,<4.0",
    "django-page-perms",
    "openai>=2.29.0,<3.0",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
    "boto3>=1.35,<2.0",
    "python-dotenv>=1.0,<2.0",
    "django-unfold>=0.87",
    "uvicorn>=0.42.0",
    "celery[redis]>=5.4,<6.0",
    "django-celery-results>=2.5,<3.0",
    "django-celery-beat>=2.7,<3.0",
    "django-simple-history==3.11.0",
    "channels[daphne]>=4.1,<5.0",
    "channels-redis>=4.2,<5.0",
    "websockets>=13,<16",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.9,<5.0",
    "factory-boy>=3.3,<4.0",
    "faker>=30.0,<40.0",
    "isort>=8.0.1",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.uv.sources]
django-page-perms = { path = "../packages/django-page-perms", editable = true }
